--- a/Servicios/La-ville-de-boulogne-sur-mer.html
+++ b/Servicios/La-ville-de-boulogne-sur-mer.html
@@ -127,27 +127,27 @@ La ville de boulogne sur mer - Destapaca&ntilde;os truper home depot
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-De.html">Destapaciones De </a> 
+       <a href="../Servicios/Empresas-Que-Destapen-Cañerias-en-Palermo.html">Empresas Que Destapen Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Empresas-constructoras-zona-norte.html">Empresas constructoras zona norte </a> 
+       <a href="../Servicios/Como-desatascar-una-tuberia.html">Como desatascar una tuberia </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapador-de-cañerias-sodimac.html">Destapador de cañerias sodimac </a> 
+       <a href="../Servicios/Destapar-oreja-con-mocos.html">Destapar oreja con mocos </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones.html">Destapaciones </a> 
+       <a href="../Destapa-Cañerias/Harpic-destop-instrucciones-de-uso.html">Harpic destop instrucciones de uso </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Bloque-de-plata-en-la-tabla-periodica.html">Bloque de plata en la tabla periodica </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-de-cañerias-en-zona-norte.html">Destapaciones de cañerias en zona norte </a> 
          </li>
 <!--EndPostsList-->
 
@@ -210,57 +210,57 @@ La ville de boulogne sur mer - Destapaca&ntilde;os truper home depot
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Productos-para-desatascar-tuberias.html">Productos para desatascar tuberias </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañerias.html">Destapar Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Dans-quel-pays-est-bahia-bla.html">Dans quel pays est bahia bla </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-toilet.html">Como destapar un toilet </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-24-Hs.html">Destapaciones 24 Hs </a> 
+       <a href="../Servicios/Para-que-sirve-el-alcohol-boricado.html">Para que sirve el alcohol boricado </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Plomero-Destapa-Cañerias.html">Plomero Destapa Cañerias </a> 
+       <a href="../Destapa-Cañerias/Destapar-Desague-Pluvial.html">Destapar Desague Pluvial </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapador-de-cañerias-sodimac.html">Destapador de cañerias sodimac </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-bantilde;o-bien-tapado.html">Como destapar un baño bien tapado </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Como-desatascar-una-tuberia.html">Como desatascar una tuberia </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-el-bantilde;o-con-un-gancho-de-ropa.html">Como destapar el baño con un gancho de ropa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Area-de-observacion-de-urgencias.html">Area de observacion de urgencias </a> 
+       <a href="../Servicios/Destapadora-De-Cañerias-en-Palermo.html">Destapadora De Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-cañerias-de-aguas-negras.html">Como destapar cañerias de aguas negras </a> 
+       <a href="../Servicios/Como-blanquear-la-plata.html">Como blanquear la plata </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Cable-destapa-cañerias-precio.html">Cable destapa cañerias precio </a> 
+       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias-con-vinagre.html">Remedios caseros para destapar cañerias con vinagre </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Como-limpiar-el-inodoro-del-sarro.html">Como limpiar el inodoro del sarro </a> 
+       <a href="../Servicios/Resorte-Destapa-Cañerias-en-Palermo.html">Resorte Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Cantidad-de-inodoros-por-persona.html">Cantidad de inodoros por persona </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-la-cantilde;eria-de-la-bacha-de-la-cocina.html">Como destapar la cañeria de la bacha de la cocina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
