--- a/Servicios/Mejor-Destapador-De-Cañerias-en-Palermo.html
+++ b/Servicios/Mejor-Destapador-De-Cañerias-en-Palermo.html
@@ -137,27 +137,27 @@ Mejor Destapador De Cañerias
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Area-de-observacion-de-urgencias.html">Area de observacion de urgencias </a> 
+       <a href="../Destapa-Cañerias/Alcohol-boricado-a-saturacion.html">Alcohol boricado a saturacion </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Harpic-destapacaños-como-se-usa.html">Harpic destapacaños como se usa </a> 
+       <a href="../Servicios/Destapadora-De-Cañerias-en-Palermo.html">Destapadora De Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-Emergencias.html">Destapaciones Emergencias </a> 
+       <a href="../Servicios/En-que-objetos-se-encuentra-la-plata.html">En que objetos se encuentra la plata </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Como-se-escribe-inodoro-en-ingles.html">Como se escribe inodoro en ingles </a> 
+       <a href="../Destapa-Cañerias/Como-remover-pelos-encravados.html">Como remover pelos encravados </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/El-Mejor-Destapa-Cañerias-en-Palermo.html">El Mejor Destapa Cañerias en Palermo </a> 
+       <a href="../Servicios/Destapadora-De-Cañeria-en-Palermo.html">Destapadora De Cañeria en Palermo </a> 
          </li>
 <!--EndPostsList-->
 
@@ -220,57 +220,57 @@ Mejor Destapador De Cañerias
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-burzaco.html">Destapa cañerias zona sur burzaco </a> 
+       <a href="../Destapa-Cañerias/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-Cañeria-Con-Grasa-en-Palermo.html">Destapar Cañeria Con Grasa en Palermo </a> 
+       <a href="../Servicios/Plaza-de-las-estrellas.html">Plaza de las estrellas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquina.html">Destapaciones Con Maquina </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-liquido-para-inodoro.html">Destapacaños liquido para inodoro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-Cañerias-Con-Grasa-en-Palermo.html">Destapar Cañerias Con Grasa en Palermo </a> 
+       <a href="../Destapa-Cañerias/Destapar-cañerias-casero-vinagre.html">Destapar cañerias casero vinagre </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-24-Hs.html">Destapaciones 24 Hs </a> 
+       <a href="../Servicios/Bloque-de-plata-en-la-tabla-periodica.html">Bloque de plata en la tabla periodica </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Plomero-para-destapar-cañerias.html">Plomero para destapar cañerias </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañeria-Cocina.html">Destapar Cañeria Cocina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-zona-sur.html">Destapaciones de cloacas zona sur </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-bantilde;o-dificil.html">Como destapar un baño dificil </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/El-Mejor-Destapa-Cañerias-en-Palermo.html">El Mejor Destapa Cañerias en Palermo </a> 
+       <a href="../Servicios/Para-que-sirve-el-alcohol-boricado.html">Para que sirve el alcohol boricado </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapa-cañerias-liquido-precio.html">Destapa cañerias liquido precio </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-el-bantilde;o-con-un-gancho-de-ropa.html">Como destapar el baño con un gancho de ropa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Mejor-Destapador-De-Cañerias-en-Palermo.html">Mejor Destapador De Cañerias en Palermo </a> 
+       <a href="../Servicios/Como-destapar-el-inodoro-con-bicarbonato-de-sodio.html">Como destapar el inodoro con bicarbonato de sodio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Limpieza-De-Cañerias.html">Limpieza De Cañerias </a> 
+       <a href="../Servicios/Como-destapar-el-baño-con-bicarbonato-y-vinagre.html">Como destapar el baño con bicarbonato y vinagre </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
